--- a/res/global.css
+++ b/res/global.css
@@ -3,24 +3,47 @@ body{margin:0; padding:0;}
 div.mygrid{
   min-height:100vh;
   display:grid;
-  grid-template-colums: 1fr 1fr;
-  grid-gap:20px;
+  grid-column: auto;
+  grid-rows: auto;
+  grid-gap:10px;
 }
 
 img.myimg{
-  display:block;
-  width:80%;
-  height:80%;
-  background-color: #eee;
+  display: block;
+  width:75%;
+  height:75%;
+  background-color: DarkGoldenRod;
   object-fit: contain;
-  align-self:center;
+  align-self: center;
   justify-self:center;
 }
 
 div.rtf{
   width:80%;
   max-width:60ch;
-  background-color: #eee;
+  background-color: DarkSlateGray;
+  color:white;
+  line-height:1.3em;
+  align-self:center;
+  justify-self:center;
+  padding:3em;
+}
+
+div.pinkbox{
+  width:80%;
+  max-width:60ch;
+  background-color: DeepPink;
+  color:white;
+  align-self:center;
+  justify-self:center;
+  padding:3em;
+}
+
+div.redbox{
+  width:80%;
+  max-width:60ch;
+  background-color: Firebrick;
+  color:white;
   align-self:center;
   justify-self:center;
   padding:3em;
