--- a/fly/project1.css
+++ b/fly/project1.css
@@ -2,10 +2,12 @@
   margin:0;
   padding:0;
 }
-body{background-color: #44C5D5; margin:0; padding:0;}
-.mainframe{max-width:1200px; margin:auto;}
 
+body{background-color: #44C5D5; margin:0; padding:0;}
+
+.mainframe{max-width:960px; margin:0 auto;}
 .slide{min-height:100vh;}
+
 .blue{background:#ADD8E6;}
 .pink{background:#F08080;}
 .yellow{background:#F5DEB3;}
@@ -14,24 +16,65 @@ body{background-color: #44C5D5; margin:0; padding:0;}
   background-repeat:no-repeat;
   background-position: center center;
   background-size:cover;
-  position:relative;
+
 }
 
+.logoimg{
+  position:relative;
+
+  left:47%;
+  width:15%;
+  height:15%;
+  padding: 20px;
+}
 .topimg-txt{
-  position:absolute;
+  position:relative;
   color:#fff;
-  top:5%;
-  left:12%;
+  top:20%;
+  left:27%;
+  padding-right:5%;
   width:80%;
 }
 
 .topimg-txt h1{
-  font-size:6em;
+  font-size:4em;
   font-family:Verdana;
   font-weight: bold;
   margin: auto;
 }
 
-.topimg-txt p{
+.topimg-txt h2{
+  color:#000;
   font-size:2em;
+  font-family:Verdana;
+  font-weight:bold;
+  padding-top:350px;
+  margin:auto;
+}
+
+.button a{
+      left:50vw;
+      bottom:-10vw;
+      transform:translate(-50%,0);
+      display:block;
+      position:absolute;
+      font-family:Verdana;
+      font-weight:bold;
+      font-size:1.5vw;
+      background-color:white;
+
+      border-radius:10px;
+      padding:2vw 5vw;
+
+      color:#000;
+
+}
+
+.button a:hover{
+
+    border:3px solid bisque;
+}
+
+.button a:active{
+
 }
