--- a/fly/project1.css
+++ b/fly/project1.css
@@ -49,7 +49,7 @@ div.slide{min-height:100vh;padding:1px;}
 
 							h2.textcenter{
 								text-align: center;
-								padding-top:20px;
+								padding-top:40px;
 							}
 
 							h2.freedomtogo{
@@ -87,15 +87,11 @@ div.slide{min-height:100vh;padding:1px;}
 								text-align:left;
 							}
 
-
       div.topimg-txt{
         position:relative;
         color:#fff;
         text-align: center;
       }
-
-
-
 
       div.secondslidetxt{
         position:relative;
@@ -137,16 +133,16 @@ div.slide{min-height:100vh;padding:1px;}
     }
 
     img.explanation{
-      text-align:center;
-      width:80%;
+
+      width:100%;
     }
 
 		img.pockets{
-		  width:30vw;
+		  width:100%;
 		}
 
 		img.createdby{
-			width:30vw;
+			width:100%;
 		}
 
 		img.testimonalpic{
@@ -159,18 +155,25 @@ div.slide{min-height:100vh;padding:1px;}
       }
 
 			img.whitejacket{
-				text-align:center;
-	      background-repeat:no-repeat;
-	      background-position: top center;
-	      background-size: cover;
-				padding-top:20px;
+
+				padding-top:30px;
+				width:100%;
+				object-fit: cover;
+
 			}
 
+div.button{
+	text-align:center;
+}
+
 div.button a{
+
 
       display:inline-block;
       margin-top:1em;
 			margin-bottom:2em;
+			margin-left:auto;
+			margin-right:auto;
       position: relative;
 
       text-decoration: none;
@@ -190,9 +193,13 @@ div.button2 a{
       margin-top:45em;
 
 }
+div.button-blue{
+	text-align:left;
+}
 
 div.button-blue a{
   background:#8ED5E5;
+
 }
 
 div.txtholder{
@@ -242,8 +249,11 @@ div.bottom{
 div.grid2col{
         display:grid;
         grid-template-columns:1.5fr 1fr;
-        grid-gap:10px;
+        grid-gap:20px;
       }
-
+.textspace{
+	justify-self: center;
+	align-self: center;
+}
 div.lightblue{background:#8ED5E5;}
 div.white{background:white;}
