--- a/fly/project1.css
+++ b/fly/project1.css
@@ -132,18 +132,9 @@ div.slide{min-height:100vh;padding:1px;}
       background-size:cover;
     }
 
-    img.explanation{
-
+    img.img-txtholder{
       width:100%;
     }
-
-		img.pockets{
-		  width:100%;
-		}
-
-		img.createdby{
-			width:100%;
-		}
 
 		img.testimonalpic{
 				width:min(max(20vw,100px),200px); height:min(max(20vw,100px),200px);
@@ -155,11 +146,9 @@ div.slide{min-height:100vh;padding:1px;}
       }
 
 			img.whitejacket{
-
 				padding-top:30px;
 				width:100%;
 				object-fit: cover;
-
 			}
 
 div.button{
@@ -167,7 +156,6 @@ div.button{
 }
 
 div.button a{
-
 
       display:inline-block;
       margin-top:1em;
@@ -180,32 +168,39 @@ div.button a{
       box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
       font-family:Verdana;
       font-weight:bold;
-
+ 			color:#000;
       background-color:white;
       border-radius:10px;
       padding:15px 20px;
+}
 
-      color:#000;
+div.button:hover a{
+	background-color:DarkSlateGrey;
+	color:white;
+}
+
+div.button:active a{
+	position:relative;
+	top:1px;
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
 }
 
 div.button2 a{
-
       margin-top:45em;
-
 }
+
 div.button-blue{
 	text-align:left;
 }
 
 div.button-blue a{
   background:#8ED5E5;
-
 }
 
 div.txtholder{
   max-width: 80%;
   min-height:30vh;
-  height:80vh;
+  height:100vh;
   margin:20px auto 40px auto;
   padding:20px;
 
